--- a/papers/cs294-tidalsim/cs294-tidalsim.tex
+++ b/papers/cs294-tidalsim/cs294-tidalsim.tex
@@ -343,12 +343,12 @@ Cycle-level or trace-based simulators suffer from low accuracy and unbounded err
 RTL simulation delivers high accuracy, but with very low throughput.
 FPGA or ASIC based simulators can match the accuracy of RTL simulation, but come with high startup latency and cost.
 
-We propose TidalSim: a multi-level simulator that can deliver the accuracy of RTL simulation, with the throughput of FPGA-based simulators, and a low startup latency, similar to RTL simulators.
+We propose TidalSim: a multi-level simulator that can deliver the accuracy of RTL simulation, with the throughput of FPGA-based simulators, and a low startup latency.
 
 \subsection{Our Proposal}
 
 % Sampled multi-level simulation!
-To achieve high throughput we will leverage simulation sampling techniques, but instead of using architectural simulators for performance metric estimation, we will use RTL simulators for high accuracy.
+To achieve high throughput we will leverage simulation sampling techniques, but instead of using architectural simulators for performance metric estimation, we will use RTL simulators.
 We specifically employ a sampling methodology similar to Simpoint, but with functional warmup and shorter interval lengths.
 
 \subsubsection{Why Use RTL Simulators?}
@@ -357,6 +357,7 @@ We specifically employ a sampling methodology similar to Simpoint, but with func
 % Why not just go into perf simulators?
 % Don't want to design perf model and then design RTL to match that - what a waste, not agile!
 % Aren't "trends" enough? Not when we care about small IPC changes! The absolute number matters!
+% Miscorrelation vs RTL *compounds* over simulation time!
 % the correlation problem gets compounded 2x - sampling error + perf sim - RTL sim correlation errors
 % Also what are the special things we can get from RTL simulation that perf sim can't get us?
 
@@ -365,22 +366,34 @@ We continue to use functional warmup models similar to those in architectural si
 
 \paragraph{What is the benefit of introducing RTL simulators into the mix?}
 
-For one, it has been shown that performance simulators can be wildly inaccurate\cite{arch_sim_considered_harmful, arch_sim_survey} and often has unbounded modeling errors in addition to sampling errors, while RTL simulation is cycle-accurate.
-This also means there is no need to perform correlation between the performance simulators and RTL.
+For one, it has been shown that performance simulators can be wildly inaccurate\cite{arch_sim_considered_harmful, arch_sim_survey} and often have unbounded modeling errors in addition to sampling errors, while RTL simulation is cycle-accurate.
+Also, using RTL simulation for performance estimation means there is no need to perform correlation between the performance simulators and RTL.
+
+Having RTL also enables us to derive accurate PPA numbers for the SoC as a whole using a traditional synthesis flow, whereas performance simulators can at best give vague estimates.
+Since our flow already leverages sampled simulation for performance trace estimation, we can apply a similar flow to extrapolate a full power trace using post-RTL power estimation CAD tools.
+
+Finally, RTL simulators produce special collateral that cannot be produced from performance simulators, such as RTL-level waveforms and detailed microarchitectural events.
+Thus, we can obtain many short waveforms that reflect unique aspects of the simulated workloads, suitable for applications ranging from power modeling to coverpoint synthesis.
 
 \paragraph{Why was mixing RTL simulation with sampled simulation not attempted before?}
 
-Miscorrelation vs RTL *compounds* over simulation time!
+% We can't try to 'fix' perf models. And in the new open source research era we have RTL! for every part of the system too! we can draw realistic conclusions finally! cite Chipyard, ESP, OpenPiton
 
-We can't try to 'fix' perf models. And in the new open source research era we have RTL! for every part of the system too! we can draw realistic conclusions finally! cite Chipyard, ESP, OpenPiton
+In order to use RTL simulation, you need to have RTL for the design point that you are trying to evaluate.
+In the past, this has been difficult since the only available open-source RTL was low quality, low performance, poorly parameterizable, and not extensible.
+Furthermore, to use RTL simulation with sampling requires a way to restore and resume simulation from architectural checkpoints: this can tightly couple the low-level state injection logic with a specific RTL design point.
+
+Recently, we have seen an explosion of design frameworks with high quality open-source RTL for every part of a complete SoC\cite{chipyard, open_esp, openpiton, xiangshan, pulpv2}.
+These design frameworks support extensive parameterization, easy integration of external RTL, and can leverage hardware compiler frameworks\cite{firrtl} to automate generation of state injection code.
+It has now become possible to leverage RTL for large workload simulation and microarchitectural design space exploration.
 
 \subsubsection{Why Use Simpoint-Style Sampling?}
 
 Why Simpoint? fine time-granularity, high liklihood of unique traces, eventual ability to extrapolate across workloads
 
-\section{Implementation}
-
 \subsection{TidalSim Overview}
+
+\section{Implementation}
 
 \subsection{Interval Embedding Strategies}
 
@@ -405,9 +418,11 @@ Microarchitecture agnostic
 DMI is too slow, a total bottleneck. Also doesn't work for uArch state.
 We use force/release which avoid needing a debug simulator, is very fast, and general.
 
-\subsubsection{Caveats}
+\subsubsection{State Injection Caveats}
 
 Not all state can be cleanly injected!
+
+\subsubsection{Performance Metric Extraction}
 
 \subsection{Extrapolation}
 
@@ -445,9 +460,13 @@ Works fine for shrinkwrapped examples with no interrupts (external or timer), no
 But consider things like timer interrupts or syscall proxying to the host via tether! Or external interrupts!
 The ISA-level simulation needs an understanding of time to make consistent decisions or error will compound!
 
+Unifying embedding-based interval selection with random interval selection, increasing random sampling when errors appear to be high.
+
 \section{Related Work}
 
 \section{Conclusion}
+
+% Add Github links to all forks and tidalsim top
 
 \begin{acks}
 Acks go here (Seah, Joonho, Sophia, Chris)
