--- a/papers/references/soc_frameworks.bib
+++ b/papers/references/soc_frameworks.bib
@@ -68,3 +68,14 @@
   pages={20-31},
   doi={10.1109/MM.2017.3711645}
 }
+
+@ARTICLE{blackparrot,
+  author={Petrisko, Daniel and Gilani, Farzam and Wyse, Mark and Jung, Dai Cheol and Davidson, Scott and Gao, Paul and Zhao, Chun and Azad, Zahra and Canakci, Sadullah and Veluri, Bandhav and Guarino, Tavio and Joshi, Ajay and Oskin, Mark and Taylor, Michael Bedford},
+  journal={IEEE Micro}, 
+  title={BlackParrot: An Agile Open-Source RISC-V Multicore for Accelerator SoCs}, 
+  year={2020},
+  volume={40},
+  number={4},
+  pages={93-102},
+  doi={10.1109/MM.2020.2996145}
+}
