some more words

--- a/papers/references/arch_simulation.bib
+++ b/papers/references/arch_simulation.bib
@@ -60,3 +60,10 @@
   location = {San Diego, California},
   series = {ISCA '03}
 }
+
+@article{nps,
+  title={NPS: A Framework for Accurate Program Sampling Using Graph Neural Network},
+  author={Fang, Yuanwei and Liu, Zihao and Lu, Yanheng and Liu, Jiawei and Li, Jiajie and Jin, Yi and Chen, Jian and Chen, Yenkuang and Zheng, Hongzhong and Xie, Yuan},
+  journal={arXiv preprint arXiv:2304.08880},
+  year={2023}
+}
