--- a/papers/cs294-tidalsim/cs294-tidalsim.tex
+++ b/papers/cs294-tidalsim/cs294-tidalsim.tex
@@ -415,25 +415,45 @@ The steps of the flow are:
 \begin{enumerate}
   \item Call a functional simulator with a workload binary to get a commit log (contains PC, decoded instruction, register operands, and memory transactions for each committed instruction)
   \item Split the commit log into intervals with a fixed number of instructions
-  \item Something else
+  \item Embed each interval using its basic block vector
+  \item Cluster the interval embeddings using k-means clustering
+  \item Pick intervals closest to each cluster's centroid for simulation
+  \item Re-execute functional simulation to extract architectural checkpoints for each chosen interval and execute the microarchitectural warmup models to produce microarchitectural checkpoints
+  \item Inject each checkpoint into RTL simulation and measure performance metrics
+  \item Extrapolate each simulated interval's performance to produce a performance trace for the full workload
 \end{enumerate}
-We use a similar technique as Simpoint in performing commit log dumping from a functional simulator, 
 
 \section{Implementation}
 
+We will now discuss implementation details for each part of the TidalSim flow.
+
 \subsection{Interval Embedding Strategies}
 
-For embeddings:
-Binary agnostic
-Microarchitecture agnostic
-- BBVs - binary aware, uarch unaware
-- NPS - binary unaware, uarch unaware
-- BBVs + uarch features - binary aware, uarch aware
-- Ideal - binary unaware, uarch aware
+In general, there are many ways to embed an interval.
+An embedding should capture microarchitectural behaviors of the interval such that intervals with similar embeddings have similar performance metrics.
+However, since embeddings have to be produced from the output of functional simulation, they do not have access to microarchitectural events or metrics.
+
+The embedding used by Simpoint is the \textit{basic block vector}.
+The number of features is the number of basic blocks in the workload (RISC-V binary).
+The value of each feature indicates how many instructions in the interval landed in its basic block.
+While this feature is easy to compute, it is not \textit{binary-agnostic}, so the embeddings only have relevance for a given workload.
+However, the embedding is \textit{microarchitecture-agnostic}, so it can be computed offline and applied to any particular hardware parameterization.
+
+In contrast, others have proposed embeddings that are both binary and microarchitecture agnostic\cite{nps}.
+We leave the consideration of alternative embeddings to future work.
+
+% Binary agnostic
+% Microarchitecture agnostic
+% - BBVs - binary aware, uarch unaware
+% - NPS - binary unaware, uarch unaware \cite{nps}
+% - BBVs + uarch features - binary aware, uarch aware
+% - Ideal - binary unaware, uarch aware
 
 \subsection{Basic Block Identification and BBV Embedding}
 
 \subsection{Architectural Checkpointing}
+
+Once we have identified
 
 \subsection{Functional Warmup Models}
 
