remove repeat citations

--- a/papers/references/sampled_simulation.bib
+++ b/papers/references/sampled_simulation.bib
@@ -3,23 +3,23 @@
 
 % Profile-driven sampling
 % SimPoint
-@article{sherwood2002automatically,
-  title={Automatically characterizing large scale program behavior},
-  author={Sherwood, Timothy and Perelman, Erez and Hamerly, Greg and Calder, Brad},
-  journal={ACM SIGPLAN Notices},
-  volume={37},
-  number={10},
-  pages={45--57},
-  year={2002},
-  publisher={ACM New York, NY, USA}
-}
+article{sherwood2002automatically,
+   title={Automatically characterizing large scale program behavior},
+   author={Sherwood, Timothy and Perelman, Erez and Hamerly, Greg and Calder, Brad},
+   journal={ACM SIGPLAN Notices},
+   volume={37},
+   number={10},
+   pages={45--57},
+   year={2002},
+   publisher={ACM New York, NY, USA}
+ }
 
 % Statistical sampling
 % SMARTS
-@inproceedings{wunderlich2003smarts,
-  title={SMARTS: Accelerating microarchitecture simulation via rigorous statistical sampling},
-  author={Wunderlich, Roland E and Wenisch, Thomas F and Falsafi, Babak and Hoe, James C},
-  booktitle={Proceedings of the 30th annual international symposium on Computer architecture},
-  pages={84--97},
-  year={2003}
-}
+inproceedings{wunderlich2003smarts,
+   title={SMARTS: Accelerating microarchitecture simulation via rigorous statistical sampling},
+   author={Wunderlich, Roland E and Wenisch, Thomas F and Falsafi, Babak and Hoe, James C},
+   booktitle={Proceedings of the 30th annual international symposium on Computer architecture},
+   pages={84--97},
+   year={2003}
+ }
